# Simple-DB-for-Embedded-System-Logging

./: CMakeLists.txt  FileHander_Windows.cpp  FileHandler_Windows.h  IFileHandler.h  Instrumentation.h  LICENSE  README.md  dbengine.cpp  dbengine.h  dbengine.index.cpp  testapp.cpp  testapp.h
